[feat]: Caching Mechanism Added for the bot

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,19 @@ services:
     environment:
       - CONSUMER_KEY=""
       - CONSUMER_SECRET=""
-      - QUERY=Python
+      - QUERY=Ruby-on-Rails
       - SLACK_BOT_TOKEN=""
       - SLACK_APP_TOKEN=""
-      - CHANNEL_ID=C05856EUC8L
+      - CHANNEL_ID=""
+      - REDIS_HOST=redis
+      - REDIS_TTL=10
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+
+volumes:
+  redis_data:
