--- a/environment.yml
+++ b/environment.yml
@@ -55,6 +55,7 @@ dependencies:
       - python-dotenv==1.0.0
       - python-upwork-oauth2==3.0.4
       - pytz==2023.3
+      - redis==4.5.5
       - requests==2.30.0
       - requests-oauthlib==1.3.1
       - selenium==4.9.1
